[gd_scene load_steps=3 format=3 uid="uid://t3cnl017lper"]

[ext_resource type="Script" path="res://ui/build_mode/structure_button.gd" id="1_krdok"]

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_tenb5"]
width = 128
height = 128

[node name="StructureButton" type="TextureButton"]
offset_right = 128.0
offset_bottom = 128.0
texture_normal = SubResource("NoiseTexture2D_tenb5")
stretch_mode = 4
script = ExtResource("1_krdok")

[node name="StructureDetails" type="PanelContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 50.0
grow_horizontal = 0
mouse_filter = 1

[node name="VBoxContainer" type="VBoxContainer" parent="StructureDetails"]
layout_mode = 2

[node name="DisplayName" type="Label" parent="StructureDetails/VBoxContainer"]
layout_mode = 2

[node name="Description" type="Label" parent="StructureDetails/VBoxContainer"]
layout_mode = 2

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
